--- a/application/index/view/user/recharge.html
+++ b/application/index/view/user/recharge.html
@@ -281,7 +281,7 @@
                 <div class="new_list">
                     <div class="rows">
                         <label>当前费率</label>
-                        <input type="text" value="{$rate}" readonly/>
+                        <input type="text" value="{$rate}" id="rate" readonly/>
                     </div>
                     <ul>
                         <li>30000</li>
@@ -296,9 +296,9 @@
                     </ul>
                     <div class="rows">
                         <label>充值金额</label>
-                        <input type="number" value="3000" class="money" name="money" lay-verify="number"/>
+                        <input type="number" value="3000" class="money" id="money" name="money" lay-verify="number"/>
                     </div>
-                    <li>
+                    <li class="rows">
                         <label>到账金额</label>
                         <input type="number" readonly id="real_money" value="{$real}" />
                     </li>
@@ -328,11 +328,38 @@
 </body>
 </html>
 <script type="text/javascript">
+    $("#money").blur(function () {
+        var vals=$(this).val();
+        var rate=$('#rate').val();
+        if(isNotANumber(vals)==true){
+            if(vals<0){
+                $("#money").val(0);
+            }else if(vals>0){
+                var money=parseFloat(vals)/parseFloat(rate);
+                $('#real_money').val(money.toFixed(2));
+            }
+        }else{
+            $("#money").val(0);
+        }
+    });
+    function isNotANumber(inputData) {
+        //isNaN(inputData)不能判断空串或一个空格
+        //如果是一个空串或是一个空格，而isNaN是做为数字0进行处理的，而parseInt与parseFloat是返回一个错误消息，这个isNaN检查不严密而导致的。
+        if(parseFloat(inputData).toString() == "NaN") {
+            return false;
+        } else {
+            return true;
+        }
+    }
     $(function  () {
         $('.new_list ul li').click(function(){
             $(this).addClass('active').siblings().removeClass('active');
 //            console.log($(this).text());
             $('.money').val($(this).text());
+            var rate=$('#rate').val();
+            var money=parseFloat($(this).text())/parseFloat(rate);
+            $('#real_money').val(money.toFixed(2));
+
         })
         layui.use('form', function(){
             $ = layui.jquery;
