--- a/application/agent/view/withdraw/withdraw.html
+++ b/application/agent/view/withdraw/withdraw.html
@@ -42,7 +42,7 @@
                                                 当前费率
                                 </label>
                                 <div class="layui-input-inline">
-                                    <input type="text" readonly value="{$rate}" class="layui-input" >
+                                    <input type="text" readonly value="{$rate}" id="rate" class="layui-input" >
                                 </div>
                             </div>
                             <div class="layui-form-item">
@@ -94,7 +94,29 @@
 
 </div>
 <script>
-
+    $("#money").blur(function () {
+        var vals=$(this).val();
+        var rate=$('#rate').val();
+        if(isNotANumber(vals)==true){
+            if(vals<0){
+                $("#money").val(0);
+            }else if(vals>0){
+                var money=parseFloat(vals)/parseFloat(rate);
+                $('#real_money').val(money.toFixed(2));
+            }
+        }else{
+            $("#money").val(0);
+        }
+    });
+    function isNotANumber(inputData) {
+        //isNaN(inputData)不能判断空串或一个空格
+        //如果是一个空串或是一个空格，而isNaN是做为数字0进行处理的，而parseInt与parseFloat是返回一个错误消息，这个isNaN检查不严密而导致的。
+        if(parseFloat(inputData).toString() == "NaN") {
+            return false;
+        } else {
+            return true;
+        }
+    }
     layui.use(['form','layer'], function(){
         $ = layui.jquery;
         var form = layui.form
