--- a/application/admin/view/money/agent_withdraw_list.html
+++ b/application/admin/view/money/agent_withdraw_list.html
@@ -98,7 +98,7 @@
             <td>{$vo.agent_name}</td>
             <td>{$vo.nickname}</td>
             <td>{$vo.money|number_format=###,2,'.',''}</td>
-            <td>{$vo.rate}</td>
+            <td>{$vo.rate|number_format=###,2,'.',''}</td>
             <td>{$vo.real_money|number_format=###,2,'.',''}</td>
             <td>{$vo.name}</td>
             <td>{$vo.phone}</td>
