--- a/application/agent/view/withdraw/withdraw_list.html
+++ b/application/agent/view/withdraw/withdraw_list.html
@@ -91,7 +91,7 @@
         <tr>
             <td>{$vo.id}</td>
             <td>{$vo.money|number_format=###,2,'.',''}</td>
-            <td>{$vo.rate}</td>
+            <td>{$vo.rate|number_format=###,2,'.',''}</td>
             <td>{$vo.real_money|number_format=###,2,'.',''}</td>
             <td>{$vo.name}</td>
             <td>{$vo.phone}</td>
