--- a/application/admin/view/money/user_withdraw_list.html
+++ b/application/admin/view/money/user_withdraw_list.html
@@ -99,7 +99,7 @@
             <td>{$vo.username}</td>
             <td>{$vo.nickname}</td>
             <td>{$vo.money|number_format=###,2,'.',''}</td>
-            <td>{$vo.arte|number_format=###,2,'.',''}</td>
+            <td>{$vo.rate|number_format=###,2,'.',''}</td>
             <td>{$vo.real_money|number_format=###,2,'.',''}</td>
             <td>{$vo.name}</td>
             <td>{$vo.phone}</td>
