--- a/application/index/view/user/recharge.html
+++ b/application/index/view/user/recharge.html
@@ -356,9 +356,9 @@
             $(this).addClass('active').siblings().removeClass('active');
 //            console.log($(this).text());
             $('.money').val($(this).text());
-            var rate=$('#rate').val();
-            var money=parseFloat($(this).text())/parseFloat(rate);
-            $('#real_money').val(money.toFixed(2));
+//            var rate=$('#rate').val();
+//            var money=parseFloat($(this).text())/parseFloat(rate);
+//            $('#real_money').val(money.toFixed(2));
 
         })
         layui.use('form', function(){
