--- a/application/mobile/view/login/login.html
+++ b/application/mobile/view/login/login.html
@@ -21,7 +21,7 @@
             	<span class="eamil-icon common-icon">
                 	<img src="/static/mobile/images/eamil.png" />
                 </span>
-                <input type="email" name="username" value="" placeholder="请输入您的手机号" lay-verify="phone" />
+                <input type="tel" name="username" value="" placeholder="请输入您的手机号" lay-verify="phone" />
             </div>
             <div class="login-user-pasw common-div">
             	<span class="pasw-icon common-icon">
