--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -153,13 +153,13 @@
                     </div>
                     <span class="weui-cell__ft"></span>
                 </a>
-                <a class="weui-cell weui-cell_access" href="/mobile/User/coin_list">
-                    <div class="weui-cell__hd"><img src="/static/mobile/images/center-icon-sc.png" alt="" class="center-list-icon"></div>
-                    <div class="weui-cell__bd weui-cell_primary">
-                        <p class="center-list-txt">申购币记录</p>
-                    </div>
-                    <span class="weui-cell__ft"></span>
-                </a>
+                <!--<a class="weui-cell weui-cell_access" href="/mobile/User/coin_list">-->
+                    <!--<div class="weui-cell__hd"><img src="/static/mobile/images/center-icon-sc.png" alt="" class="center-list-icon"></div>-->
+                    <!--<div class="weui-cell__bd weui-cell_primary">-->
+                        <!--<p class="center-list-txt">申购币记录</p>-->
+                    <!--</div>-->
+                    <!--<span class="weui-cell__ft"></span>-->
+                <!--</a>-->
 
               <a class="weui-cell weui-cell_access" href="/mobile/User/re_pwd">
                 <div class="weui-cell__hd"><img src="/static/mobile/images/center-icon-dlmm.png" alt="" class="center-list-icon"></div>
