--- a/application/mobile/view/user/money_list.html
+++ b/application/mobile/view/user/money_list.html
@@ -68,7 +68,7 @@
                         for(var i=0;i<res.length;i++){
                             list+='<div class="weui-panel__bd">';
                             list +='<div class="weui-media-box weui-media-box_text">';
-                            list +='<h4 class="weui-media-box__title">￥<em class="num">'+res[i]['amount']+'</em><span class="fr">'+res[i]['type_info']+'</span></h4>';
+                            list +='<h4 class="weui-media-box__title">￥<em class="num">'+res[i]['money']+'</em><span class="fr">'+res[i]['type_info']+'</span></h4>';
                             list +='<p class="weui-media-box__desc">变化前:'+res[i]['before_money']+',变化后:'+res[i]['after_money']+'</p>';
                             list +='<ul class="weui-media-box__info">';
                             list +='<li class="weui-media-box__info__meta">交易时间：<em class="num">'+res[i]['add_time']+'</em></li>';
