--- a/application/index/view/user/real_auth.html
+++ b/application/index/view/user/real_auth.html
@@ -260,7 +260,7 @@
                         </li>
                         <li>
                             <label>身份证号</label>
-                            <input type="text"  value="{$real_info.card}"  readonly />
+                            <input type="text"  value="{$real_info.card|dataDesensitization=###,4,10}"  readonly />
                         </li>
                         <li>
                             <label>发起时间</label>
@@ -282,7 +282,7 @@
                         </li>
                         <li>
                             <label>身份证号</label>
-                            <input type="text"  value="{$real_info.card}"  readonly />
+                            <input type="text"  value="{$real_info.card|dataDesensitization=###,4,10}"  readonly />
                         </li>
                         <li>
                             <label>发起时间</label>
@@ -304,11 +304,11 @@
                         </li>
                         <li>
                             <label>真实姓名</label>
-                            <input type="text" placeholder="请输入真实姓名" name="name" lay-verify="name" value="{$real_info.name}"  />
+                            <input type="text" placeholder="请输入真实姓名" name="name" lay-verify="name"  />
                         </li>
                         <li>
                             <label>身份证号</label>
-                            <input type="text" placeholder="请输入身份证号码" name="card" lay-verify="card" value="{$real_info.card}"  />
+                            <input type="text" placeholder="请输入身份证号码" name="card" lay-verify="card"   />
                         </li>
 
                     </ul>
@@ -378,10 +378,9 @@
                     }
                 }
                 ,card:function(value){
-                    if(value.length < 15||value.length > 18){
-                        return '请输入正确的身份证号码';
-                    }
-                    if(!new RegExp("^[xX0-9_\u4e00-\u9fa5\\s·]+$").test(value)){
+                    var reg = /(^\d{15}$)|(^\d{18}$)|(^\d{17}(\d|X|x)$)/;
+                    if(reg.test(value) === false)
+                    {
                         return '请输入正确的身份证号码';
                     }
                 }
