--- a/application/mobile/view/user/recharge.html
+++ b/application/mobile/view/user/recharge.html
@@ -9,6 +9,41 @@
         <link rel="stylesheet" href="/static/mobile/css/weui.min.css">
         <link rel="stylesheet" href="/static/mobile/css/style.css">
     </head>
+    <style type="text/css">
+        .recharge .recharge-item{
+            font-size: 0;
+            width: 100%;
+        }
+        .recharge .recharge-item li{
+            display: inline-block;
+            width: 33.33%;
+            padding: 8px 0;
+            text-align: center;
+        }
+        .recharge .recharge-item li a{
+            font-size: 16px;
+            color: white;
+            display: inline-block;
+            width: 62%;
+            line-height: 220%;
+            border:1px solid #eee;
+            border-radius: 8px;
+            -moz-border-radius: 8px;
+            -webkit-border-radius: 8px;
+        }
+        .recharge .recharge-item li .active{
+            background: #1AAD19;
+            border: none;
+            color: #fff;
+        }
+        #money{
+            color: white;
+        }
+        #type{
+            color: white;
+            background-color: #000000;
+        }
+    </style>
 <body >
 <!--主体-->
 <header class="wy-header">
@@ -19,14 +54,14 @@
   <div class="weui-cells weui-cells_form">
   	<div class="weui-cell">
   		<ul class="recharge-item">
-            <li><a href="javascript:void(0);">5000</a></li>
-            <li><a href="javascript:void(0);">3000</a></li>
-            <li><a href="javascript:void(0);">2000</a></li>
+            <li><a href="javascript:void(0);">30000</a></li>
+            <li><a href="javascript:void(0);">20000</a></li>
+            <li><a href="javascript:void(0);">10000</a></li>
+  			<li><a href="javascript:void(0);">8000</a></li>
+  			<li><a href="javascript:void(0);">5000</a></li>
   			<li><a href="javascript:void(0);">1000</a></li>
-  			<li><a href="javascript:void(0);">800</a></li>
+  			<li><a class="active1" href="javascript:void(0);">800</a></li>
   			<li><a href="javascript:void(0);">500</a></li>
-  			<li><a class="active1" href="javascript:void(0);">300</a></li>
-  			<li><a href="javascript:void(0);">200</a></li>
   			<li><a href="javascript:void(0);">100</a></li>
   		</ul>
   	</div>
@@ -40,10 +75,10 @@
 
 	<div class="weui-cells weui-cells_form">
 	  <div class="weui-cell">
-	    <div class="weui-cell__hd"><label for="pay-type" class="weui-label">支付方式</label></div>
+	    <div class="weui-cell__hd"><label  class="weui-label">支付方式</label></div>
 	    <div class="weui-cell__bd">
             <select lay-verify="type" id="type" name="type">
-                <option value="0">清选择支付方式</option>
+                <option value="0">请选择支付方式</option>
                 <option value="5001">微信扫码</option>
                 <option value="2004">支付宝扫码</option>
                 <option value="QWJ_QUICK">快捷支付</option>
@@ -56,7 +91,13 @@
   <div class="weui-btn-area">
     <a class="weui-btn weui-btn_primary" href="javascript:" id="showTooltips">去充值</a>
   </div>
-  
+
+</div>
+<div  style="text-indent: 1rem;color: white;margin-top: 3rem;">
+    <p>特别提醒：</p>
+    <p>1.微信支付宝扫码限额500-30000</p>
+    <p>2.快捷支付限额100-10000</p>
+    <p>3.网银支付限额100-200000</p>
 </div>
 <script src="/static/index/js/jquery-2.1.1.min.js"></script>
 <script src="/static/mobile/js/jquery-weui.js"></script>
@@ -69,69 +110,59 @@
     	$(this).addClass('active').parent().siblings().find('a').removeClass('active');
       $("#money").val($(this).text());
     })
-
-//      $("#pay-type").select({
-//          title: "支付方式",
-//          items: [
-//              {
-//                  title: "支付宝",
-//                  value: "1",
-//              },
-//              {
-//                  title: "微信",
-//                  value: "2",
-//              },
-//              {
-//                 title: "快捷支付",
-//                 value: "3",
-//              },
-//              // {
-//              //     title: "银联扫码",
-//              //     value: "5",
-//              // }
-//          ]
-//      });
-
-    
   });
 
 $("#showTooltips").click(function(event) {
-    var money = $("#money").val()*1;
-
-    var is_weixin='';
-    var check_type = $("#pay-type");
-    // if(is_weixin==0){
-    //     check_type = $("#mutil_pay")
-    //     var pay_type = check_type.attr('data-values');
-    // }else{
-    //     check_type = $("#pay-type")
-    //     var pay_type = check_type.attr('data-values');
-    // }
-
-    var pay_type = check_type.attr('data-values');
-
-    if(money<100){
-        layer.msg("单笔充值最低100元");
+    var type=$('#type').val();
+    var money=$('#money').val();
+    if(money<=0){
+        layer.msg('请输入正确的金额',{icon: 2,time:1000});
         return false;
-    }else{
-        if(money > check_type.attr('data-max')){
-            layer.msg(check_type.val()+"最高"+check_type.attr('data-max'));
+    }
+    if(type==0){
+        layer.msg('请选择支付方式',{icon: 2,time:1000});
+        return false;
+    }
+    if(type==5001||type==2004){
+        if(money<500){
+            layer.msg('最低充值金额500',{icon: 2,time:1000});
             return false;
         }
-        // if(pay_type==922 && money>3000){
-        //     layer.msg("微信最高3000");
-        //     return false;
-        // }
-        // if(pay_type==914 && money>5000){
-        //     layer.msg("银联最高5000");
-        //     return false;
-        // }
+        if(money>30000){
+            layer.msg('最高充值金额30000',{icon: 2,time:1000});
+            return false;
+        }
+    }else if(type=='QWJ_QUICK'){
+        if(money<100){
+            layer.msg('最低充值金额100',{icon: 2,time:1000});
+            return false;
+        }
+        if(money>5000){
+            layer.msg('最高充值金额10000',{icon: 2,time:1000});
+            return false;
+        }
+    } else if(type==7001){
+        if(money<100){
+            layer.msg('最低充值金额100',{icon: 2,time:1000});
+            return false;
+        }
+        if(money>200000){
+            layer.msg('最高充值金额200000',{icon: 2,time:1000});
+            return false;
+        }
     }
-    //var pay_type_arr = pay_type.split('-');
-
-    var jump_url = "/mobile/pay/pay?money="+money+"&pay_type="+pay_type;
-    console.log(jump_url);
-    window.location.href=jump_url;
+    $.showLoading("提交中");
+    $("#showTooltips").attr("disabled",true);
+    $.post("/mobile/User/recharge",{money:money,type:type},function(res){
+        $.hideLoading();
+        $("#showTooltips").removeAttr("disabled");
+        if(res.status==1){
+            window.location.href=res.info;
+        }else{
+            layer.msg(res.msg,{icon: 2,time:1000});
+        }
+    },'json');
+    return false;
 });
 
 </script>
