--- a/application/mobile/view/user/withdraw.html
+++ b/application/mobile/view/user/withdraw.html
@@ -6,8 +6,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.">
-		<link rel="stylesheet" href="__STATIC__/mobile/lib/weui.min.css">
-		<link rel="stylesheet" href="__STATIC__/mobile/css/style.css">
+        <link rel="stylesheet" href="/static/mobile/css/weui.min.css">
+        <link rel="stylesheet" href="/static/mobile/css/style.css">
+        <style type="text/css">
+            #amount,#bank_info_id,#money{
+                color: white;
+            }
+            #bank_info_id{
+                background-color: #000000;
+            }
+        </style>
 	</head>
 <body ontouchstart>
 <!--主体-->
@@ -16,31 +24,14 @@
   <div class="wy-header-title">提现</div>
 </header>
 <div class="weui-content recharge">
-  <!--<div class="weui-cells weui-cells_form">-->
-  	<!--<div class="weui-cell">-->
-  		<!--<ul class="recharge-item">-->
-  			<!--<li><a  href="javascript:void(0);">1000</a></li>-->
-  			<!--<li><a href="javascript:void(0);">800</a></li>-->
-  			<!--<li><a href="javascript:void(0);">500</a></li>-->
-  			<!--<li><a href="javascript:void(0);">300</a></li>-->
-  			<!--<li><a href="javascript:void(0);">200</a></li>-->
-  			<!--<li><a href="javascript:void(0);">100</a></li>-->
-  		<!--</ul>-->
-  	<!--</div>-->
-  <!--</div>-->
+
   <div class="weui-cells weui-cells_form">
      <div class="weui-cell">
-          <div class="weui-cell__hd"><label class="weui-label">账户余额</label></div>
-          <div class="weui-cell__bd"><input class="weui-input" type="number" readonly="readonly" id="amount" value="{$info.money|number_format=###,2,".",""}"></div>
-      </div>
-      <div class="weui-cell">
-          <div class="weui-cell__hd"><label class="weui-label">真实姓名</label></div>
-          <div class="weui-cell__bd">
-              <input class="weui-input" type="text" id="bank_khm" name='bank_khm' readonly="readonly" placeholder="请输入真实姓名" value="{$info.realname}" >
-          </div>
+          <div class="weui-cell__hd"><label class="weui-label">可用余额</label></div>
+          <div class="weui-cell__bd"><input class="weui-input" type="text" readonly="readonly" id="amount" value="{$real_money|number_format=###,2,".",""}"></div>
       </div>
 
-     <form action="/mobile/user/withdraw" id='withdraw_form'>
+     <form  id='withdraw_form'>
           <div class="weui-cell">
               <div class="weui-cell__hd"><label class="weui-label">提现金额</label></div>
               <div class="weui-cell__bd">
@@ -48,134 +39,56 @@
               </div>
           </div>
          <div class="weui-cell">
-             <div class="weui-cell__hd"><label class="weui-label"></label></div>
-             <div class="weui-cell__bd" id="money-info"></div>
-         </div>
-          <div class="weui-cell">
-              <div class="weui-cell__hd"><label class="weui-label">银行名称</label></div>
-              <div class="weui-cell__bd">
-                  <input class="weui-input" type="text" id="bank_name" name='bank_name'  placeholder="请输入银行名称"  value="{$bank.bank_name|default=''}" >
-              </div>
-          </div>
-         
-          <div class="weui-cell">
-              <div class="weui-cell__hd"><label class="weui-label">银行卡号</label></div>
-              <div class="weui-cell__bd">
-                  <input class="weui-input" type="text" id="bank_id" name='bank_id'  placeholder="请输入银行卡号"  value="{$bank.bank_id|default=''}" >
-              </div>
-          </div>
-          <!--<div class="weui-cell">-->
-              <!--<div class="weui-cell__hd"><label class="weui-label">备注</label></div>-->
-              <!--<div class="weui-cell__bd">-->
-                  <!--<input class="weui-input" type="text" id="remark" name='remark'  placeholder="请输入备注（选填）">-->
-              <!--</div>-->
-          <!--</div>-->
-         <div class="weui-cell">
-             <div class="weui-cell__hd"><label class="weui-label">取款密码</label></div>
-             <div class="weui-cell__bd">
-                 <input class="weui-input" type="password" id="withdraw_pwd" name='withdraw_pwd'  placeholder="请输入取款密码">
+             <div class="weui-cell__hd">
+                 <label class="weui-label">提现银行卡</label>
              </div>
+             <select name="bank_info_id" id="bank_info_id">
+                 <option  value="0">请选择银行卡信息</option>
+                 {volist name="bank_info_list" id="val"}
+                 <option  value="{$val.id}">{$val.bank_name}—{$val.bank_card|dataDesensitization=###,4,8}</option>
+                 {/volist}
+             </select>
          </div>
+
       </form>
   </div>
   <div class="weui-btn-area">
       <input  class="weui-btn weui-btn_primary"  value="确认提交" readonly="readonly" >
   </div>
-    <style type="text/css">
-        .zy{
-            font-size: 13px;;
-        }
-    </style>
-    <div class="weui-btn-area yue_remind" style="padding-bottom: 20px;padding-top: 10px;">
-        <div class="layui-card-body">
-            {$protocol ? html_entity_decode($protocol):''}
-        </div>
+    <div  style="text-indent: 1rem;color: white;margin-top: 3rem;">
+        <p>特别提醒：</p>
+        <p>1.提现前必须进行实名认证，并绑定银行卡</p>
+        <p>2.提现银行卡对应的姓名必须是实名认证的姓名</p>
+        <p>3.提现银行卡对应的手机号必须是注册时的号码</p>
     </div>
 </div>
-
-<script src="__STATIC__/mobile/lib/jquery-2.1.4.js"></script>
-<script type="text/javascript" src="__STATIC__/layer/layer.js"></script>
-<script src="__STATIC__/mobile/js/jquery-weui.js"></script>
+<script src="/static/index/js/jquery-2.1.1.min.js"></script>
+<script src="/static/mobile/js/jquery-weui.js"></script>
+<script src="/static/layer/layer.js" charset="utf-8"></script>
 <script type="text/javascript">
-    $('#money-info').parents('.weui-cell').hide();
-    $('#money').blur(function(){
-        if($(this).val()*1 > 0){
-            $.post("/index/api/_withdraw_check_money",{money:$(this).val()},function(res){
-                if(res.code==0){
-                    $('#money-info').parents('.weui-cell').show();
-                    $('#money-info').html(res.msg);
-                }else{
-                    layer.msg(res.msg);
-                }
-            },'json');
-        }
-    })
-
-
     $(".weui-btn").click(function(event) {
-//        var test = new Date();
-//        if(test.getHours()<8 || test.getHours()>16 ){
-//            $.toast('请您在每天：9点—17点，提交申请','forbidden');
-//            return false;
-//        }
-//        alert('功能暂未开放，请联系客服处理');
-//        return false;
-        var money = $('#amount').val();
-        if($("#money").val()==""){
-            layer.msg('请输入提现金额');
+        var money = $('#money').val();
+        var bank_info_id = $('#bank_info_id').val();
+        if(money==""){
+            layer.msg('请输入提现金额',{icon: 2,time:1000});
             return;
         }
-        if($("#money").val()<{$min_tixian_money}){
-            layer.msg('单笔最低{$min_tixian_money}元');
+        if(money<=0){
+            layer.msg('请输入正确的提现金额',{icon: 2,time:1000});
             return;
         }
-//        if($("#money").val()>money){
-//            layer.msg('账户余额不足');
-//            return;
-//        }
-        if($("#bank_khm").val()==""){
-            layer.msg('请输入您的姓名');
+        if(bank_info_id==0){
+            layer.msg('请选择提现银行卡',{icon: 2,time:1000});
             return;
         }
-        if($("#bank_khm").val().length <1 || $("#bank_khm").val().length>10){
-            layer.msg('请输入正确姓名');
-            return;
-        }
-        if($("#bank_name").val()==""){
-            layer.msg('请输入银行名称');
-            return;
-        }
-        if($("#bank_name").val().length <2 || $("#bank_name").val().length>50){
-            layer.msg('请输入正确的银行名称');
-            return;
-        }
-
-        if($("#bank_id").val()==""){
-            layer.msg('请输入银行卡号');
-            return;
-        }
-        if($("#bank_id").val().length <15 || $("#bank_id").val().length>20){
-            layer.msg('请输入正确的银行卡号');
-            return;
-        }
-        if($("#withdraw_pwd").val()==""){
-            layer.msg('请输入取款密码');
-            return;
-        }
-        if($("#withdraw_pwd").val().length < 6 || $("#withdraw_pwd").val().length>16){
-            layer.msg('请输入6-16位取款密码');
-            return;
-        }
-
         $.showLoading("提交中");
         _this = $("#withdraw_form");
-        $.post("{:url('index/api/_withdraw')}", _this.serialize(), function(data, textStatus, xhr) {
+        $.post("/mobile/User/withdraw", _this.serialize(), function(data) {
             $(".weui-btn").attr('disabled',"true");
-//                console.log(data);
             $.hideLoading();
-            layer.msg(data.msg,{time:2000},function(){
+            layer.msg(data.msg,{icon: 1,time:2000},function(){
                 if(data.status==1){
-                    window.location.href="/mobile/user/mine";
+                    window.location.href="/mobile/User/index";
                 }else{
                     $('.weui-btn').removeAttr("disabled");
                 }
