--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -47,19 +47,19 @@
     <div class="weui-panel__bd">
       <div class="weui-flex">
         <div class="weui-flex__item">
-          <a href="myburse.html" class="center-ordersModule">
+          <a href="javascript:;" class="center-ordersModule">
             <div class="center-money"><em>{$info.money|number_format=###,2,'.',''}</em></div>
             <div class="name">账户余额</div>
           </a>
         </div>
         <div class="weui-flex__item">
-          <a href="myburse.html" class="center-ordersModule">
+          <a href="javascript:;" class="center-ordersModule">
             <div class="center-money"><em>{$info.promise_money|number_format=###,2,'.',''}</em></div>
             <div class="name">保证金余额</div>
           </a>
         </div>
         <div class="weui-flex__item">
-          <a href="myburse.html" class="center-ordersModule">
+          <a href="javascript:;" class="center-ordersModule">
             <div class="center-money"><em>{$info.real_money|number_format=###,2,'.',''}</em></div>
             <div class="name">可用余额</div>
           </a>
