--- a/application/mobile/view/user/re_pwd.html
+++ b/application/mobile/view/user/re_pwd.html
@@ -12,7 +12,7 @@
 <body ontouchstart>
 <!--主体-->
 <header class="wy-header">
-  <div class="wy-header-icon-back" onclick="history_back()"><span></span></div>
+  <div class="wy-header-icon-back" onclick="window.history.back();"><span></span></div>
   <div class="wy-header-title">密码修改</div>
 </header>
 <div class="weui-content">
