--- a/application/mobile/view/user/bank_list.html
+++ b/application/mobile/view/user/bank_list.html
@@ -55,10 +55,16 @@
         </div>
         </div>
     </div>
-    {if $count<3}
-  <div class="weui-btn-area">
-   <a href="/mobile/User/bank_add" class="weui-btn weui-btn_plain-default" style="border:1px solid white;">绑定银行卡</a>
-  </div>
+    {if $info.real ==2}
+        {if $count<3}
+      <div class="weui-btn-area">
+       <a href="/mobile/User/bank_add" class="weui-btn weui-btn_plain-default" style="border:1px solid white;">绑定银行卡</a>
+      </div>
+        {/if}
+    {else/}
+    <div class="weui-btn-area">
+        <a href="/mobile/User/real_auth" class="weui-btn weui-btn_plain-default" style="border:1px solid white;">请先进行实名认证,去认证</a>
+    </div>
     {/if}
     <div  style="text-indent: 1rem;color: white;margin-top: 3rem;">
         <p>特别提醒：</p>
