--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -30,7 +30,7 @@
               {if $info.real==1}
               <em class="num">已认证</em>
               {else/}
-              <em class="num" style="color: red;"><a href="/mobile/User/real_auth">未实名，去认证</a></em>
+              <em class="num" ><a href="/mobile/User/real_auth" style="color: red;">未实名，去认证</a></em>
               {/if}</p>
           <p class="user-integral">{$info.nickname}
         </p>
