--- a/application/mobile/view/login/register.html
+++ b/application/mobile/view/login/register.html
@@ -23,42 +23,98 @@
   <div class="wy-header-title">手机注册</div>
 </header>
 <div class="weui-content">
-  <div class="weui-cells weui-cells_form wy-address-edit">
+    <form method="post" class="layui-form" >
+
+    <div class="weui-cells weui-cells_form wy-address-edit">
     <div class="weui-cell">
       <div class="weui-cell__hd"><label class="weui-label wy-lab">手机号</label></div>
-      <div class="weui-cell__bd"><input class="weui-input" type="tel" placeholder="请输入手机号"></div>
+      <div class="weui-cell__bd"><input class="weui-input" type="tel" placeholder="请输入手机号" lay-verify="phone"></div>
     </div>
     <div class="weui-cell weui-cell_vcode">
       <div class="weui-cell__hd"><label class="weui-label wy-lab">图形验证码</label></div>
-      <div class="weui-cell__bd"><input class="weui-input" type="number" placeholder="请输入图形验证码"></div>
+      <div class="weui-cell__bd"><input class="weui-input" type="number" placeholder="请输入图形验证码" lay-verify="vcode|number" id="vcode"></div>
       <div class="weui-cell__ft">
-      <img src="/agent/Login/verify" id="my_code" alt="captcha" style="height: 2rem;width: 5.4rem" onClick="this.src=this.src+'?'+Math.random()"/>
+      <img src="/agent/Login/verify" id="my_code" alt="captcha" style="height: 2rem;width: 4.1rem" onClick="this.src=this.src+'?'+Math.random()"/>
       </div>
     </div>
       <div class="weui-cell weui-cell_vcode">
           <div class="weui-cell__hd"><label class="weui-label wy-lab">动态验证码</label></div>
-          <div class="weui-cell__bd"><input class="weui-input" type="number" placeholder="请输入动态验证码"></div>
-          <div class="weui-cell__ft"><button class="weui-vcode-btn">获取验证码</button></div>
+          <div class="weui-cell__bd"><input class="weui-input" type="number" placeholder="请输入动态验证码" lay-verify="code|number" name="code"></div>
+          <div class="weui-cell__ft"><button type="button" class="weui-vcode-btn" onclick="send_msg()">点击发送</button></div>
       </div>
     <div class="weui-cell">
+      <div class="weui-cell__hd"><label class="weui-label wy-lab">姓名</label></div>
+      <div class="weui-cell__bd"><input class="weui-input" lay-verify="nickname" type="text"  placeholder="请输入您的姓名"></div>
+    </div>
+        <div class="weui-cell">
       <div class="weui-cell__hd"><label class="weui-label wy-lab">设置密码</label></div>
-      <div class="weui-cell__bd"><input class="weui-input" type="password" pattern="[0-9]*" placeholder="请输入新密码"></div>
+      <div class="weui-cell__bd"><input class="weui-input" type="password"  name="password" placeholder="请输入新密码" lay-verify="password"></div>
     </div>
     <div class="weui-cell">
       <div class="weui-cell__hd"><label class="weui-label wy-lab">确认密码</label></div>
-      <div class="weui-cell__bd"><input class="weui-input" type="password" pattern="[0-9]*" placeholder="请再次输入新密码"></div>
+      <div class="weui-cell__bd"><input lay-verify="re_password" class="weui-input" type="password" name="re_password"  placeholder="请再次输入新密码"></div>
     </div>
-  </div>
-  <label for="weuiAgree" class="weui-agree">
+        <div class="weui-cell">
+            <div class="weui-cell__hd"><label class="weui-label wy-lab">邀请码</label></div>
+            <div class="weui-cell__bd"><input class="weui-input"  type="number" name="invite_number"  placeholder="选填" value="{$invite_number}"></div>
+        </div>
+    </div>
+
+    <label for="weuiAgree" class="weui-agree">
     <input id="weuiAgree" type="checkbox" class="weui-agree__checkbox" checked="checked">
-    <span class="weui-agree__text">阅读并同意<a href="javascript:void(0);">《注册协议》</a></span>
+    <span class="weui-agree__text" style="float: left">阅读并同意<a href="javascript:void(0);">《注册协议》</a></span>
   </label>
-  <div class="weui-btn-area"><a href="javascript:;" class="weui-btn weui-btn_warn">注册并登陆</a></div>
+    </form>
+    <div class="weui-btn-area"><a href="javascript:;" class="weui-btn weui-btn_warn">注册并登陆</a></div>
   <div class="weui-cells__tips t-c font-12">登陆账号为您输入的手机号码</div>
   <div class="weui-cells__tips t-c pd-10"><a href="/mobile/Login/xieyi" class="weui-cell_link font-12">查看注册协议</a></div>
-  
+
 </div>
 
 <script src="/static/index/js/jquery-2.1.1.min.js"></script>
+<script src="/static/admin/lib/layui/layui.js" charset="utf-8"></script>
+<script type="text/javascript" src="/static/admin/js/xadmin.js"></script>
+<script type="text/javascript">
+    function send_msg() {
+        var phone = $('#username').val();
+        var vcode = $('#vcode').val();
+        if(!(/^1[3457698]\d{9}$/.test(phone))){
+            layer.msg("请正确输入手机号！",{icon: 2,time:1000});
+            $('#username').focus();
+            return false;
+        }
+        if(vcode.length!=4){
+            layer.msg("请正确图形验证码！",{icon: 2,time:1000});
+            $('#vcode').focus();
+            return false;
+        }
+        var url = "/index/Login/send_msg";
+        $.post(url,{phone:phone,vcode:vcode},function(resdata){
+            console.log(resdata);
+            layer.msg(resdata.msg);
+            if(resdata.status == 1){
+                $(".code_btn").attr('onclick',"return false;");
+                msg_time_down();
+            }else{
+                $('#my_code').click();
+            }
+        })
+        return false;
+    }
+    function msg_time_down(){
+        var time= 61;
+        setTime=setInterval(function(){
+            if(time<=1){
+                clearInterval(setTime);
+                $(".code_btn").val("再发一次");
+                $(".code_btn").attr('onclick',"return send_msg();");
+                return;
+            }
+            time--;
+            $(".code_btn").val(time+"s");
+
+        },1000);
+    }
+</script>
 </body>
 </html>
