--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -566,7 +566,7 @@
             <div class="about_me">
                 <div class="wx">
                     <a href="javascript:" class="footer_wx_icon">
-                        <img src="/static/index/images/ABT.png"/>
+                        <img src="/static/index/images/ABT.png" style="width: 57%"/>
                     </a>
                 </div>
             </div>
